# OBSIM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.trae/documents/: refactor_recoder_base_class.md
build_check/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  OBSIM.sln  OBSIM.vcxproj  OBSIM.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_check/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_check/OBSIM.dir/Release/: OBSIM.exe.recipe
build_check/OBSIM.dir/Release/OBSIM.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  OBSIM.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_check/OBSIM_autogen/: mocs_compilation_Release.cpp
build_check/OBSIM_autogen/include_Release/456JQEBO2C/: moc_devicemanager.cpp
build_check/OBSIM_autogen/include_Release/GRGLGJWN7X/: moc_controlbar.cpp  moc_mainwindow.cpp  moc_settingbar.cpp  moc_settingsdialog.cpp
build_check/OBSIM_autogen/include_Release/JD243IQNTZ/: moc_audiomanager.cpp
build_check/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_check/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_check/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_fix/: ALL_BUILD.vcxproj  OBSIM.sln  OBSIM.vcxproj  OBSIM.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_fix/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_fix/OBSIM.dir/Debug/: OBSIM.exe.recipe
build_fix/OBSIM.dir/Debug/OBSIM.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  OBSIM.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_fix/OBSIM_autogen/include_Debug/GRGLGJWN7X/: moc_scenepreviewwidget.cpp
build_fix/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_fix/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
frontend/: main.cpp
frontend/base/: audiocaptor.h  filterpreviewwidget.cpp  filterpreviewwidget.h  recoder.cpp  recoder.h  videocaptor.cpp  videocaptor.h
frontend/core/: audiocaptor.cpp  audiocaptor.h  audiomanager.cpp  audiomanager.h  camera.cpp  camera.h  cameracapturesource.cpp  cameracapturesource.h  coreengine.cpp  coreengine.h  displaycaptor.cpp  displaycaptor.h  filerecoder.cpp  filerecoder.h  imagesource.cpp  imagesource.h  micaudiocaptor.cpp  micaudiocaptor.h  recoder.cpp  recoder.h  scene.cpp  scene.h  screencaptor.cpp  screencaptor.h  screencapturesource.cpp  screencapturesource.h  soundcaptor.cpp  soundcaptor.h  source.cpp  source.h  streampush.cpp  streampush.h  systemaudiocaptor.cpp  systemaudiocaptor.h  textsource.cpp  textsource.h  videocaptor.cpp  videocaptor.h  videosource.cpp  videosource.h
frontend/test/: testsource.h
frontend/utils/: configmanager.h  datasafequeue.h  devicemanager.cpp  devicemanager.h  displaymanager.cpp  displaymanager.h  ffmpegfactory.h
frontend/widget/: controlbar.cpp  controlbar.h  mainwindow.cpp  mainwindow.h  scenepreviewwidget.cpp  scenepreviewwidget.h  settingbar.cpp  settingbar.h  settingsdialog.cpp  settingsdialog.h
include/: PCH.h  av_err2str_cxx.h  captor.h  datasafequeue.h  ffmpegfactory.h
include/Core/: camera.h  captor.h  coreengine.h  displaycaptor.h
include/UI/: controlbar.h  mainwindow.h  sdlwindow.h  settingbar.h
include/Utils/: Logger.h  displaymanager.h
resources/: style.qss
src/: captor.cpp  main.cpp
src/Core/: camera.cpp  captor.cpp  coreengine.cpp  displaycaptor.cpp  soundcaptor.cpp
src/UI/: controlbar.cpp  controlbar.h  mainwindow.cpp  sdlwindow.cpp  settingbar.cpp
src/Utils/: Logger.cpp  displaymanager.cpp
src/core/: audiomanager.cpp  audiomanager.h  camera.cpp  camera.h  cameracapturesource.cpp  cameracapturesource.h  displaycapturepool.cpp  displaycapturepool.h  dxgiscreencaptor.cpp  dxgiscreencaptor.h  fileoutput.cpp  fileoutput.h  filerecoder.cpp  filerecoder.h  imagesource.cpp  imagesource.h  micaudiocaptor.cpp  micaudiocaptor.h  outputchannel.h  pooleddisplaycaptor.cpp  pooleddisplaycaptor.h  recoder.cpp  recoder.h  recorder.cpp  recorder.h  scene.cpp  scene.h  screencaptor.cpp  screencaptor.h  screencapturesource.cpp  screencapturesource.h  streamoutput.cpp  streamoutput.h  streampush.cpp  streampush.h  systemaudiocaptor.cpp  systemaudiocaptor.h  textsource.cpp  textsource.h  videosource.cpp  (+1 more)
src/core/base/: audiocaptor.cpp  audiocaptor.h  outputchannel.h  recoder.cpp  recoder.h  source.cpp  source.h  videocaptor.cpp  videocaptor.h
src/core/filter/: filteredvideocaptor.cpp  filteredvideocaptor.h  opencvfilter.cpp  opencvfilter.h
src/frontend/base/: audiocaptor.cpp  filterpreviewwidget.cpp  filterpreviewwidget.h  previewbasewidget.cpp  previewbasewidget.h  recoder.h  videocaptor.cpp
src/frontend/test/: testsource.h
src/frontend/widget/: controlbar.cpp  controlbar.h  filterpreviewwidget.cpp  filterpreviewwidget.h  mainwindow.cpp  mainwindow.h  previewbasewidget.cpp  previewbasewidget.h  scenepreviewwidget.cpp  scenepreviewwidget.h  settingbar.cpp  settingbar.h  settingsdialog.cpp  settingsdialog.h  settingspreviewwidget.cpp  settingspreviewwidget.h
src/utils/: PCH.h  av_err2str_cxx.h  configmanager.h  datasafequeue.h  devicemanager.cpp  devicemanager.h  ffmpegfactory.h
test/: CMakeLists.txt  test_audiomanager.cpp  test_configmanager.cpp  test_datasafequeue.cpp  test_opencv_filter.cpp  test_opencvfilter_gtest.cpp  test_recoder.cpp  test_scene_state.cpp  test_source_geometry.cpp  test_videocaptor.cpp
test/benchmark/: bench_filter.cpp  bench_queue.cpp  bench_recoder.cpp  bench_scene.cpp
新建文件夹/: CMakeLists.txt
(+8 files in other folders)
